--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <li><span>HTML&CSS</span><br>Designing wed interface.</li>
                             <li><span>js</span><br>developers to manipulate the page's structure.</li>
                             <li><Span>java</Span><br>basic for prgraming languag.</li>
-                            <li><span>Mern Stack</span><br> develop web applications.</li>
+                            <li><span>React</span><br> to build dynamic and performant user interfaces for web applications.</li>
                             <li><span>PL/SQL</span><br>for database.</li>
                         </ul>
                      </div>
@@ -65,7 +65,7 @@
                             <li><span>2025</span><br>B.Tech from swami vivekananda university.</li>
                         </ul>
                      </div>
-                     <div class="cv1"><a href="image/Amlan Bag Resume.pdf" download class="cv"> My Resume<i class="fa-solid fa-download"></i></a></div>
+                     <div class="cv1"><a href="image/CV_Amlan Bag.pdf" download class="cv"> My Resume<i class="fa-solid fa-download"></i></a></div>
                 </div>
             </div>
         </div>
@@ -107,23 +107,23 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="image/work1.jpg"style="width: 475px; height: 555px;"alt=""><br><br>
+                        <img src="image/work1.png"style="width: 475px; height: 555px;"alt=""><br><br>
                         <div class="layer">
-                            <h3>Nodepad app</h3>
-                            <p>In tis website we can save all our node and it stors in locak storage.</p><br><br>
+                            <h3>Live Chat webapp</h3>
+                            <p>In this website allows businesses to communicate with customers in real time.</p><br><br>
                             <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="image/work2.png" alt=""><br><br>
+                        <img src="image/work2.png"style="width: 475px; height: 555px; alt=""><br><br>
                        <div class="layer">
-                            <h3>Nodepad app</h3>
-                            <p>In tis website we can save all our node and it stors in locak storage.</p><br><br>
-                            <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <h3>Nodepad webapp</h3>
+                            <p>In this website we can save all our node and it stors in locak storage.</p><br><br>
+                            <a href="https://amlan69.github.io/Notes.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                 </div>
             </div>
-            <a href="#"class="btn">see more</a>
+            <a href="https://github.com/Amlan69/Notes.github.io" target="_blank"class="btn">see more</a>
         </div>
 <!---------contact--------->
 <div id="contact">
