--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                         <ul>
                             <li><span>2018</span><br>10<sup>th</sup> from Kendriya Vidyalaya IIT Kharagpur.</li>
                             <li><span>2021</span><br>12<sup>th</sup> from Sai +2 Higher Secondary.</li>
-                            <li><span>2024</span><br>MSME Tool Room.</li>
-                            <li><span>2025</span><br>B.Tech from swami vivekananda university.</li>
+                            <li><span>2024</span><br>MSME Tool Room.[JAVA, PL/SQL]</li>
+                            <li><span>2025</span><br>B.Tech from Swami Vivekananda University.</li>
                         </ul>
                      </div>
-                     <div class="cv1"><a href="image/CV_Amlan Bag.pdf" download class="cv"> My Resume<i class="fa-solid fa-download"></i></a></div>
+                     <div class="cv1"><a href="image/CV_Amlan.pdf" download class="cv"> My Resume<i class="fa-solid fa-download"></i></a></div>
                 </div>
             </div>
         </div>
